looks like it's working

--- a/server/environment.yml
+++ b/server/environment.yml
@@ -1,17 +1,17 @@
-name: env
+name: aidraw
 channels:
   - pytorch
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10.11
+  - python=3.10
   - cudatoolkit=11.3
   - thrust
-  - pytorch=1.9.1
-  - torchvision=0.10.1
+  - pytorch=1.12
+  - torchvision=0.13
   - numpy
   - scikit-image
   - cmake
   - ffmpeg
   - pip
-prefix: C:\Users\ABC\.conda\envs\env
+prefix: C:\Users\ABC\.conda\envs\aidraw
